@@ -46,7 +46,8 @@ extern "C" {
 #define XMP_PLAYER_FLAGS	4	/* Player flags */
 #define XMP_PLAYER_CFLAGS	5	/* Player flags for current module */
 #define XMP_PLAYER_SMPCTL	6	/* Sample control flags */
-#define XMP_PLAYER_STATE	7	/* Internal player state */
+#define XMP_PLAYER_VOLUME	7	/* Player master volume */
+#define XMP_PLAYER_STATE	8	/* Internal player state */
 
 /* interpolation types */
 #define XMP_INTERP_NEAREST	0	/* Nearest neighbor */
